--- a/client/package.json
+++ b/client/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
+    "qrcode": "^1.4.4",
     "react": "16.11.0",
     "react-dom": "16.11.0",
+    "react-qr-reader": "^2.2.1",
     "react-scripts": "3.2.0",
     "web3": "1.2.2"
   },
