--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,9 @@
     "qrcode": "^1.4.4",
     "react": "16.11.0",
     "react-dom": "16.11.0",
+    "react-geocode": "^0.2.3",
+    "react-geolocation": "^1.0.4",
+    "react-hook-geolocation": "^1.0.8",
     "react-qr-reader": "^2.2.1",
     "react-scripts": "3.2.0",
     "web3": "1.2.2"
